Backport Amber v10 to 1.19